--- a/springboot-learning/build.gradle
+++ b/springboot-learning/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         // 阿里云 spring 代理仓库
         maven { url 'https://maven.aliyun.com/repository/spring/' }
         // 中央maven仓库
-        jcenter()
+        // jcenter()
         mavenCentral()
     }
 
@@ -27,27 +27,33 @@ buildscript {
     }
 }
 
+//描述
+description 'springboot 学习'
+
 // 所有项目配置
 allprojects {
-    // gradle插件
-    //  Java的gradle插件
-    apply plugin: 'java'
-    // maven发布的gradle插件
-    // apply plugin: 'maven-publish'
-    // idea 扩展插件
-    apply plugin: 'idea'
-    // java增强
-    apply plugin: 'java-library'
-
-    // 定义您的源文件应该被视为哪种语言版本的 Java。
-    sourceCompatibility = '1.8'
-    // 定义您的代码应该运行的最低 JVM 版本，即它确定编译器生成的字节码版本。
-    targetCompatibility = '1.8'
-
     // 项目信息
     group = 'com.gavin'
     // 版本
     version = '0.0.1-SNAPSHOT'
+}
+
+// 子项目设置
+subprojects {
+    // 签名
+    apply plugin: 'signing'
+    // java增强
+    apply plugin: 'java-library'
+    // maven jar 发布
+    apply plugin: 'maven-publish'
+    // spring依赖管理插件
+    apply plugin: 'io.spring.dependency-management'
+
+    // 指定编码格式 第一种方法
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+        options.warnings = false
+    }
 
     // 项目仓库设置
     repositories {
@@ -64,14 +70,6 @@ allprojects {
         mavenCentral()
     }
 
-    // 指定编码格式 第一种方法
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-    }
-
-    // 指定编码格式 第二种方法
-    // [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
-
     // 依赖范围配置修改
     configurations {
         // 修改annotationProcessor 使其可以继承
@@ -80,14 +78,14 @@ allprojects {
         }
     }
 
-}
-
-// 子项目设置
-subprojects {
-    // springboot插件
-    apply plugin: 'org.springframework.boot'
-    // spring依赖管理插件
-    apply plugin: 'io.spring.dependency-management'
+    // 依赖管理
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+        }
+        dependencies {
+        }
+    }
 
     // 全局依赖
     dependencies {
@@ -102,6 +100,11 @@ subprojects {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
     }
+
+    // 定义您的源文件应该被视为哪种语言版本的 Java。
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    // 定义您的代码应该运行的最低 JVM 版本，即它确定编译器生成的字节码版本。
+    targetCompatibility = JavaVersion.VERSION_1_8
 
     // 测试配置
     test {
