--- a/springcloud-learning/settings.gradle
+++ b/springcloud-learning/settings.gradle
@@ -6,4 +6,13 @@ include 'springcloud-knife4j'
 include 'springcloud-seata'
 include 'springcloud-pwoerjob'
 include 'springcloud-tlog'
+include 'springcloud-sa-token'
+include 'springcloud-sa-token:sa-token-oauth2-gateway'
+findProject(':springcloud-sa-token:sa-token-oauth2-gateway')?.name = 'sa-token-oauth2-gateway'
+include 'springcloud-sa-token:sa-token-oauth2-auth'
+findProject(':springcloud-sa-token:sa-token-oauth2-auth')?.name = 'sa-token-oauth2-auth'
+include 'springcloud-sa-token:sa-token-common'
+findProject(':springcloud-sa-token:sa-token-common')?.name = 'sa-token-common'
+include 'springcloud-sa-token:sa-token-oauth2-api'
+findProject(':springcloud-sa-token:sa-token-oauth2-api')?.name = 'sa-token-oauth2-api'
 
