--- a/springboot-learning/springboot-task/build.gradle
+++ b/springboot-learning/springboot-task/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
-//    implementation
+    implementation(
+            "org.springframework.boot:spring-boot-starter-web",
+            "org.springframework.boot:spring-boot-starter-undertow",
+            "org.jboss.xnio:xnio-nio"
+    )
 }
