--- a/springboot-learning/settings.gradle
+++ b/springboot-learning/settings.gradle
@@ -44,4 +44,6 @@ include 'springboot-admin'
 include 'springboot-idgenerator'
 include 'springboot-tlog'
 include 'springboot-forest'
+include 'springboot-i18n'
+include 'springboot-ip2region'
 
