--- a/springboot-learning/build.gradle
+++ b/springboot-learning/build.gradle
@@ -4,6 +4,10 @@ buildscript {
     ext {
         // 具体版本依赖可以去 https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E 找相应的版本
         springBootVersion = '2.3.12.RELEASE'
+
+        xnioVersion = '3.8.7.Final'
+
+        gavinVersion = "0.0.1-SNAPSHOT"
     }
 
     // 项目仓库设置
@@ -65,7 +69,6 @@ subprojects {
         // 阿里云 spring 代理仓库
         maven { url 'https://maven.aliyun.com/repository/spring/' }
         // 中央maven仓库
-        jcenter()
         mavenCentral()
     }
 
@@ -81,10 +84,18 @@ subprojects {
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+
+            mavenBom "com.gavin.framework:gavin-starter-dependencies:${gavinVersion}"
         }
         dependencies {
+            dependency("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
+                exclude "org.springframework.boot:spring-boot-starter-tomcat"
+            }
+            dependency("org.springframework.boot:spring-boot-starter-undertow:${springBootVersion}") {
+                exclude "org.jboss.xnio:xnio-nio"
+            }
 
-
+            dependency "org.jboss.xnio:xnio-nio:${xnioVersion}"
         }
     }
 
