--- a/springboot-learning/springboot-forest/build.gradle
+++ b/springboot-learning/springboot-forest/build.gradle
@@ -1,8 +1,6 @@
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-web") {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-    }
-    implementation "org.springframework.boot:spring-boot-starter-undertow"
-
-    implementation "com.dtflys.forest:forest-spring-boot-starter:1.5.24"
+    implementation(
+            "com.gavin.framework:gavin-starter-web",
+            "com.dtflys.forest:forest-spring-boot-starter:1.5.24"
+    )
 }
