--- a/springboot-learning/springboot-rocketmq/build.gradle
+++ b/springboot-learning/springboot-rocketmq/build.gradle
@@ -1,3 +1,8 @@
 dependencies {
-    implementation "org.apache.rocketmq:rocketmq-spring-boot-starter:2.2.0"
+    implementation (
+            "org.springframework.boot:spring-boot-starter-web",
+            "org.springframework.boot:spring-boot-starter-undertow",
+            "org.jboss.xnio:xnio-nio",
+            "org.apache.rocketmq:rocketmq-spring-boot-starter:2.2.0"
+    )
 }
