--- a/springboot-learning/springboot-ip2region/build.gradle
+++ b/springboot-learning/springboot-ip2region/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation(
             "com.gavin.framework:gavin-starter-web",
-            "com.github.hiwepy:ip2region-spring-boot-starter:2.0.0.RELEASE"
+            "com.gavin.framework:gavin-starter-ip2region"
     )
 }
