--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ dist
 gradle-app.setting
 !gradle-wrapper.jar
 .gradletasknamecache
+.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -97,6 +98,7 @@ gradle-app.setting
 .idea/**/libraries
 cmake-build-*/
 .idea/**/mongoSettings.xml
+*.iml
 *.iws
 out/
 .idea_modules/
