--- a/java/java-shbw/build.gradle
+++ b/java/java-shbw/build.gradle
@@ -2,4 +2,7 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.80'
     implementation 'com.alibaba:easyexcel:3.0.5'
     implementation 'cn.hutool:hutool-all:5.7.22'
+// https://mvnrepository.com/artifact/net.java.dev.jna/jna
+    implementation 'net.java.dev.jna:jna:5.12.1'
+
 }
