--- a/springboot-learning/springboot-knife4j/src/main/resources/application.yml
+++ b/springboot-learning/springboot-knife4j/src/main/resources/application.yml
@@ -13,3 +13,9 @@ server:
       worker: 64
 knife4j:
   enable: true
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
