--- a/springboot-learning/settings.gradle
+++ b/springboot-learning/settings.gradle
@@ -46,4 +46,5 @@ include 'springboot-tlog'
 include 'springboot-forest'
 include 'springboot-i18n'
 include 'springboot-ip2region'
+include 'springboot-task-quartz'
 
