--- a/springboot-learning/springboot-task/src/main/resources/application.yml
+++ b/springboot-learning/springboot-task/src/main/resources/application.yml
@@ -1,15 +1,17 @@
 server:
-  port: 9001
+  port: 9000
 
 spring:
   application:
-    name: springboot-cache
-  devtools:
-    livereload:
-      port: 10001
+    name: springboot-task
+
+forest:
+  max-connections: 1000        # 连接池最大连接数
+  connect-timeout: 30000        # 连接超时时间，单位为毫秒
+  read-timeout: 30000           # 数据读取超时时间，单位为毫秒
 
 logging:
   level:
     com:
       gavin:
-        task: debug
+        task: info
