--- a/springboot-learning/settings.gradle
+++ b/springboot-learning/settings.gradle
@@ -47,4 +47,13 @@ include 'springboot-forest'
 include 'springboot-i18n'
 include 'springboot-ip2region'
 include 'springboot-task-quartz'
-
+include 'springboot-qywx'
+include 'springboot-shardingjdbc'
+include 'springboot-security'
+include 'springboot-plumelog'
+include 'springboot-mail'
+include 'springboot-liteflow'
+include 'springboot-leaf'
+include 'springboot-justauth'
+include 'springboot-hellowrold'
+include 'springboot-easyexcel'
