--- a/springcloud-learning/build.gradle
+++ b/springcloud-learning/build.gradle
@@ -1,3 +1,5 @@
+import java.text.SimpleDateFormat
+
 // 针对多模块 打包的策略
 buildscript {
     // 自定义参数
@@ -42,65 +44,32 @@ buildscript {
         tlogVersion = '1.3.6'
     }
 
-
-    // 项目仓库设置
-    repositories {
-        // 优先使用本地 mavene 仓库
-        mavenLocal()
-        // 阿里云 central 仓和 jcenter 仓的聚合仓
-        maven { url 'https://maven.aliyun.com/repository/public/' }
-        // 阿里云 gradle 插件仓库
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
-        // 阿里云 spring 代理仓库
-        maven { url 'https://maven.aliyun.com/repository/spring/' }
-        // 中央maven仓库
-        mavenCentral()
-    }
-
     // springboot gradle 打包插件依赖
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
-//描述
-
 // 所有项目配置
 allprojects {
+    // java增强
+    apply plugin: 'java-library'
+    // springboot插件
+    apply plugin: "org.springframework.boot"
+    // spring依赖管理插件
+    apply plugin: "io.spring.dependency-management"
+
     // 项目信息
     group = 'com.gavin'
     // 版本
     version = '0.0.1-SNAPSHOT'
-}
 
-// 子项目设置
-subprojects {
-    // maven发布的gradle插件
-    // apply plugin: 'maven-publish'
-    // java增强
-    apply plugin: 'java-library'
-    // springboot插件
-    apply plugin: 'org.springframework.boot'
-    // spring依赖管理插件
-    apply plugin: 'io.spring.dependency-management'
-
-    // 项目仓库设置
-    repositories {
-        // 优先使用本地 mavene 仓库
-        mavenLocal()
-        // 阿里云 central 仓和 jcenter 仓的聚合仓
-        maven { url 'https://maven.aliyun.com/repository/public/' }
-        // 阿里云 gradle 插件仓库
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
-        // 阿里云 spring 代理仓库
-        maven { url 'https://maven.aliyun.com/repository/spring/' }
-        // 中央maven仓库
-        mavenCentral()
-    }
-
-    // 指定编码格式 第一种方法
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
+    // 将子项目打成jar包
+    java {
+        // 定义您的源文件应该被视为哪种语言版本的 Java。
+        sourceCompatibility JavaVersion.VERSION_1_8
+        // 定义您的代码应该运行的最低 JVM 版本，即它确定编译器生成的字节码版本。
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     // 依赖范围配置修改
@@ -110,6 +79,24 @@ subprojects {
             extendsFrom annotationProcessor
         }
     }
+    // 设置打包后缀
+    tasks.named("jar") {
+        archiveClassifier.set("")
+    }
+    // 指定编码格式 第一种方法
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
+
+    // 测试配置
+    test {
+        useJUnitPlatform()
+    }
+}
+
+// 子项目设置
+subprojects {
+
     // 子项目管理依赖
     dependencyManagement {
         imports {
@@ -187,16 +174,5 @@ subprojects {
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
-    }
-
-
-    // 定义您的源文件应该被视为哪种语言版本的 Java。
-    sourceCompatibility = JavaVersion.VERSION_17
-    // 定义您的代码应该运行的最低 JVM 版本，即它确定编译器生成的字节码版本。
-    targetCompatibility = JavaVersion.VERSION_17
-
-    // 测试配置
-    test {
-        useJUnitPlatform()
     }
 }
