--- a/springboot-learning/build.gradle
+++ b/springboot-learning/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     ext {
         // 具体版本依赖可以去 https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E 找相应的版本
         springBootVersion = "2.3.12.RELEASE"
-
+        springCloudVersion = "Hoxton.SR12"
         xnioVersion = "3.8.7.Final"
     }
 
@@ -66,16 +66,18 @@ subprojects {
     // 依赖管理
     dependencyManagement {
         imports {
+            // Spring-Cloud 依赖
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
         dependencies {
-//            dependency("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
-//                exclude "org.springframework.boot:spring-boot-starter-tomcat"
-//            }
-//            dependency("org.springframework.boot:spring-boot-starter-undertow:${springBootVersion}") {
-//                exclude "org.jboss.xnio:xnio-nio"
-//            }
-//
-//            dependency "org.jboss.xnio:xnio-nio:${xnioVersion}"
+            dependency("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
+                exclude "org.springframework.boot:spring-boot-starter-tomcat"
+            }
+            dependency("org.springframework.boot:spring-boot-starter-undertow:${springBootVersion}") {
+                exclude "org.jboss.xnio:xnio-nio"
+            }
+            dependency 'com.squareup.okhttp3:okhttp:4.10.0'
+            dependency "org.jboss.xnio:xnio-nio:${xnioVersion}"
         }
     }
 
