--- a/springboot-learning/springboot-qywx/build.gradle
+++ b/springboot-learning/springboot-qywx/build.gradle
@@ -1,12 +1,11 @@
 dependencies {
-//    implementation "org.springframework.boot:spring-boot-starter-undertow"
+    implementation "org.springframework.boot:spring-boot-starter-undertow"
     implementation "org.springframework.boot:spring-boot-starter-web"
-//    implementation "org.jboss.xnio:xnio-nio"
-//    implementation 'org.aspectj:aspectjweaver:1.9.6'
-//    implementation 'com.github.shuaidd:qywx-spring-boot-starter:4.4.1'
+    implementation "org.jboss.xnio:xnio-nio"
+    implementation 'com.github.shuaidd:qywx-spring-boot-starter:4.4.1'
 //    implementation 'commons-io:commons-io:2.11.0'
 //    implementation 'commons-fileupload:commons-fileupload:1.5'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
-//    implementation 'io.github.openfeign:feign-jackson:11.9.1'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'io.github.openfeign:feign-jackson'
 }
 
