--- a/springboot-learning/springboot-actuator/build.gradle
+++ b/springboot-learning/springboot-actuator/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     implementation(
-            "org.springframework.boot:spring-boot-starter-webflux",
+            "org.springframework.boot:spring-boot-starter-web",
+            "org.springframework.boot:spring-boot-starter-undertow",
+            "org.jboss.xnio:xnio-nio",
             "org.springframework.boot:spring-boot-starter-actuator"
     )
 }
