--- a/springboot-learning/springboot-hellowrold/build.gradle
+++ b/springboot-learning/springboot-hellowrold/build.gradle
@@ -1,3 +1,8 @@
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation(
+            "org.springframework.boot:spring-boot-starter-web",
+            "org.springframework.boot:spring-boot-starter-undertow",
+            "org.jboss.xnio:xnio-nio",
+    )
+
 }
