--- a/springboot-learning/springboot-liteflow/build.gradle
+++ b/springboot-learning/springboot-liteflow/build.gradle
@@ -3,6 +3,6 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-web",
             "org.springframework.boot:spring-boot-starter-undertow",
             "org.jboss.xnio:xnio-nio",
-            "com.dtflys.forest:forest-spring-boot-starter:1.5.24"
+            'com.yomahub:liteflow-spring-boot-starter:2.11.3'
     )
 }
