--- a/java/build.gradle
+++ b/java/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.ehcache:ehcache:3.10.8'
     implementation 'com.google.zxing:core:3.3.3'
     implementation 'com.dtflys.forest:forest-core:1.5.33'
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.66'
     // 注解依赖
     annotationProcessor(
             // lombok 简化开发
