--- a/springboot-learning/springboot-file-storage/src/main/resources/application.yml
+++ b/springboot-learning/springboot-file-storage/src/main/resources/application.yml
@@ -8,7 +8,7 @@ dromara:
         enable-storage: true  # 启用存储
         access-key: admin
         secret-key: admin123
-        end-point: "http://127.0.0.1:9000/"
-        bucket-name: dev
-        domain: "http://127.0.0.1:9000/dev/" # 访问域名，注意“/”结尾，例如：http://minio.abc.com/abc/
+        end-point: "http://192.168.1.109:9000/"
+        bucket-name: test
+        domain: "http://192.168.1.109:9000/test/" # 访问域名，注意“/”结尾，例如：http://minio.abc.com/abc/
 #        base-path: test/ # 基础路径
