--- a/springboot-learning/settings.gradle
+++ b/springboot-learning/settings.gradle
@@ -58,4 +58,10 @@ include 'springboot-justauth'
 include 'springboot-hellowrold'
 include 'springboot-easyexcel'
 include 'springboot-file-storage'
+include 'springboot-admin:springboot-admin-server'
+findProject(':springboot-admin:springboot-admin-server')?.name = 'springboot-admin-server'
+include 'springboot-admin:springboot-admin-client'
+findProject(':springboot-admin:springboot-admin-client')?.name = 'springboot-admin-client'
+include 'springboot-properties'
+include 'springboot-logback'
 
